--- a/src/View/layout.html.twig
+++ b/src/View/layout.html.twig
@@ -5,17 +5,47 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>{% block title %}{% endblock %}</title>
-
+    <title>{% block title %}Black Magic{% endblock %}</title>
+    <script src="https://kit.fontawesome.com/12c728ad22.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Anonymous+Pro:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="/assets/css/style.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.1.1/gsap.min.js" type="text/javascript" defer></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.1/TimelineMax.min.js"></script>
     {% block stylesheet %}{% endblock %}
     <link rel="icon" href="/assets/images/favicon.png">
 </head>
 
 <body>
+    <nav class="navbar navbar-expand-lg sticky-top navbar-dark bg-dark">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <a class="navbar-brand" href="/home/shop">Bullshit</a>
+            <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+            {% if session %}
+                <li class="nav-item active">
+                    <a class="nav-link" href="/home/shop">Home</a>
+                </li>
+            </ul>
+            {% if session.panier %}
+                <a class="btn btn-purple my-2 my-sm-0 mr-4" href="/home/basket"><i class="fas fa-shopping-cart"></i></a>
+            {% endif %}
+             <div class="form-inline my-2 my-lg-0">
+                <a class="btn btn-purple my-2 my-sm-0" href="/home/logout"><i class="fas fa-sign-out-alt"></i></a>
+            </div>
+            {% endif %}
+        </div>
+    </nav>
 
-{% block content %}{% endblock %}
-{% block javascript %}{% endblock %}
+    {% block content %}{% endblock %}
+
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    
+    {% block javascript %}{% endblock %}
 </body>
 </html>
 
