payment + success + post panier

--- a/src/View/Shop/panier.html.twig
+++ b/src/View/Shop/panier.html.twig
@@ -50,7 +50,7 @@
         <div class="col-12 text-right mt-2 p-3">
             <p class="total-table ">
                 ## TOTAL : <span id="total">{{ total }}</span> €
-                <a href="/home/success" class="btn btn-lg btn-primary">Pay <i class="fas fa-comment-dollar"></i></a>
+                <a href="/home/pay" class="btn btn-lg btn-primary">Pay <i class="fas fa-comment-dollar"></i></a>
             </p>
         </div>
     </div>
