--- a/src/View/Shop/index.html.twig
+++ b/src/View/Shop/index.html.twig
@@ -37,7 +37,7 @@
 
     <div class="row">
     {% for item in potions %}
-        <div class="col-3">
+        <div class="col-lg-3 col-md-6 col-sm-12">
             <div class="card my-3 mx-3 bg-dark text-white">
                 <a href="/home/potion/{{item.id}}" >
                     <img src="/assets/images/potion.jpg" class="card-img-top" alt="placeholder">
